Font and Icon link update && reconstructing app.js file

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>React Dynamic form Fields</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylsheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  </head>
+  <body>
+
+  </body>
+</html>
